# inline-fact

./: .gitignore  LICENSE  README.md  inline-fact.cabal  stack.yaml
example/: Main.hs
src/Language/FaCT/: Inline.hs
